Visual tweaks, renaming things, etc. Should be finished.

--- a/Security/Guidelines/Web_Security.mediawiki
+++ b/Security/Guidelines/Web_Security.mediawiki
@@ -40,6 +40,10 @@ The goal of this document is to help operational teams with creating secure web 
 The Enterprise Information Security (EIS) team maintains this document as a reference guide to navigate the rapidly changing landscape of web security. Changes are reviewed and merged by the Infosec team, and broadcast to the various Operational teams.
 
 Updates to this page should be submitted to the [https://github.com/mozilla/wikimo_opsec source repository on github].
+
+
+
+<div style="text-align: center;">'''STATUS: <span style="background-color: #14892c; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: 0 .5em; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">READY</span>'''</div>
       </td>
     </tr>
   </table>
@@ -49,122 +53,122 @@ Updates to this page should be submitted to the [https://github.com/mozilla/wiki
 = Web Security Cheat Sheet =
 
 {| class="wikitable sortable" style="width: 100%;"
-|-
+|- style="background-color: #aaaaaa;"
 ! data-sort-type="number" | Guideline
-! data-sort-type="number" | Benefit
-! data-sort-type="number" | Difficulty
+! data-sort-type="number" | Security<br>Benefit
+! data-sort-type="number" | Implementation<br>Difficulty
 ! data-sort-type="number" | Order<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&dagger;</sup>
 ! Requirements
 ! Notes
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="1" | [[#HTTPS|<span style="color: black;">HTTPS</span>]]
-| data-sort-value="4" style="text-align: center;" | Maximum
-| data-sort-value="2" style="text-align: center;" | Medium
+| data-sort-value="4" style="text-align: center;" | <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Maximum</span>
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
 | style="text-align: center;" data-sort-value="0" | 
 | Mandatory
 | Sites should use HTTPS (or other secure protocols) for all communications
-|- style="background-color: #E99696;"
+|- style="background-color: #ffffff;"
 | data-sort-value="2" style="padding-left: 1.5em;" | [[#HTTP Public Key Pinning|<span style="color: black;">Public Key Pinning</span>]]
-| data-sort-value="1" style="text-align: center;" | Low
-| data-sort-value="4" style="text-align: center;" | Maximum
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
+| data-sort-value="4" style="text-align: center;" | <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Maximum</span>
 | style="text-align: center;" data-sort-value="99" | --
 | Mandatory for maximum risk sites only
 | Not recommended for most sites
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="3" style="padding-left: 1.5em;" | [[#HTTP Redirections|<span style="color: black;">Redirections from HTTP</span>]]
-| data-sort-value="4" style="text-align: center;" | Maximum
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="4" style="text-align: center;" | <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Maximum</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 3
 | Mandatory
 | Websites must redirect to HTTPS, API endpoints should disable HTTP entirely
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="4" style="padding-left: 1.5em;" | [[#Resource Loading|<span style="color: black;">Resource Loading</span>]]
-| data-sort-value="4" style="text-align: center;" | Maximum
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="4" style="text-align: center;" | <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Maximum</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 2
 | Mandatory for all websites
 | Both passive and active resources should be loaded through protocols using TLS, such as HTTPS
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="5" style="padding-left: 1.5em;" | [[#HTTP Strict Transport Security|<span style="color: black;">Strict Transport Security</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 4
 | Mandatory for all websites
 | Minimum allowed time period of six months
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="6" style="padding-left: 1.5em;" | [[#HTTPS|<span style="color: black;">TLS Configuration</span>]]
-| data-sort-value="2" style="text-align: center;" | Medium
-| data-sort-value="2" style="text-align: center;" | Medium
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
 | style="text-align: center;" | 1
 | Mandatory
 | Use the most secure Mozilla TLS configuration for your user base, typically [[Security/Server Side TLS#Intermediate compatibility (default)|Intermediate]]
-|- style="background-color: #E8E27A;"
+|- style="background-color: #ffffff;"
 | data-sort-value="7" | [[#Content Security Policy|<span style="color: black;">Content Security Policy</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="3" style="text-align: center;" | High
+| data-sort-value="3" style="text-align: center;" |<span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
 | style="text-align: center;" | 10
 | Mandatory for new websites<br>Recommended for existing websites
 | Disabling inline script is the greatest concern for CSP implementation
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="8" | [[#Cookies|<span style="color: black;">Cookies</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="2" style="text-align: center;" | Medium
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
 | style="text-align: center;" | 7
 | Mandatory for all new websites<br>Recommended for existing websites
 | All cookies must be set with the Secure flag, and set as restrictively as possible
-|- style="background-color: #D2D2D2;"
+|- style="background-color: #ffffff;"
 | data-sort-value="9" | [[#contribute.json|<span style="color: black;">contribute.json</span>]]
-| data-sort-value="1" style="text-align: center;" | Low
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 9
 | Mandatory for all new Mozilla websites<br>Recommended for existing Mozilla sites
 | Mozilla sites should serve contribute.json and keep contact information up-to-date
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="10" | [[#Cross-origin Resource Sharing|<span style="color: black;">Cross-origin Resource Sharing</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 11
 | Mandatory
 | Origin sharing headers and files should not be present, except for specific use cases
-|- style="background-color: #D2D2D2;"
+|- style="background-color: #ffffff;"
 | data-sort-value="11" | [[#CSRF Prevention|<span style="color: black;">Cross-site Request Forgery Tokenization</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="99" style="text-align: center;" | --
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="99" style="text-align: center;" | <span style="background-color: #ffffff; border: solid 1px #aaaaaa; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Unknown</span>
 | style="text-align: center;" | 6
 | Varies
 | Mandatory for websites that allow destructive changes<br>Unnecessary for all other websites<br>Most application frameworks have built-in CSRF tokenization to ease implementation
-|- style="background-color: #D2D2D2;"
+|- style="background-color: #ffffff;"
 | data-sort-value="12" | [[#robots.txt|<span style="color: black;">robots.txt</span>]]
-| data-sort-value="1" style="text-align: center;" | Low
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 13
 | Optional
 | Websites that implement robots.txt must use it only for noted purposes
-|- style="background-color: #E8E27A;"
+|- style="background-color: #ffffff;"
 | data-sort-value="13" | [[#Subresource Integrity|<span style="color: black;">Subresource Integrity</span>]]
-| data-sort-value="2" style="text-align: center;" | Medium
-| data-sort-value="2" style="text-align: center;" | Medium
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
 | style="text-align: center;" | 14
 | Recommended<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup>
 | <sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup> Only for websites that load JavaScript or stylesheets from foreign origins
-|- style="background-color: #E8E27A;"
+|- style="background-color: #ffffff;"
 | data-sort-value="14" | [[#X-Content-Type-Options|<span style="color: black;">X-Content-Type-Options</span>]]
-| data-sort-value="1" style="text-align: center;" | Low
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 8
 | Recommended for all websites
 | Websites should verify that they are setting the proper MIME types for all resources
-|- style="background-color: #9EDB58;"
+|- style="background-color: #ffffff;"
 | data-sort-value="15" | [[#X-Frame-Options|<span style="color: black;">X-Frame-Options</span>]]
-| data-sort-value="3" style="text-align: center;" | High
-| data-sort-value="1" style="text-align: center;" | Easy
+| data-sort-value="3" style="text-align: center;" | <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">High</span>
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
 | style="text-align: center;" | 5
 | Mandatory for all websites
 | Websites that don't use DENY or SAMEORIGIN must employ clickjacking defenses
-|- style="background-color: #E8E27A;"
+|- style="background-color: #ffffff;"
 | data-sort-value="16" | [[#X-XSS-Protection|<span style="color: black;">X-XSS-Protection</span>]]
-| data-sort-value="1" style="text-align: center;" | Low
-| data-sort-value="2" style="text-align: center;" | Medium
+| data-sort-value="1" style="text-align: center;" | <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Low</span>
+| data-sort-value="2" style="text-align: center;" | <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Medium</span>
 | style="text-align: center;" | 12
 | Mandatory for all new websites<br>Recommended for existing websites
 | Manual testing should be done for existing websites, prior to implementation
